# fabric-physics-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  ci.yml
docs/: physics_model.md
docs/benchmarks/: canonical-scenarios.md  results-template.csv  runbook.md
docs/evaluation/: failure-modes-and-escalation.md  scorecard.md
docs/modules/: README.md  anti-artifact.md  body-responsive-adaptation.md  cinematic-realism.md  compression-system.md  core-fabric-physics.md  fold-generation.md  gravity-system.md  layering-interaction.md  material-control.md  micro-wrinkles.md  motion-inertia.md  seam-construction.md  tension-system.md
docs/spec/: fabric-physics-engine-v3.md
docs/templates/: master-template.md  quick-inserts.md  scenario-presets.md
docs/workflows/: prompt-builder-mvp.md
examples/: advanced_setup.py  basic_simulation.py
fabric_physics/: __init__.py
fabric_physics_engine/: __init__.py  __main__.py  cli.py  constraints.py  core.py  engine.py  fabrics.py  intensity.py  models.py  physics.py  rendering.py
fabric_physics_engine/modules/: __init__.py  anti_artifact.py  body_responsive_adaptation.py  cinematic_realism.py  compression_system.py  core_fabric_physics.py  fold_generation.py  gravity_system.py  layering_interaction.py  material_control.py  micro_wrinkles.py  motion_inertia.py  seam_construction.py  tension_system.py
tests/: __init__.py  test_cli.py  test_fabrics.py  test_physics.py  test_validation.py
tools/: scorecard_summary.py
