[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-physics-engine"
version = "0.2.0"
description = "A lightweight cloth simulation and prompt-realism toolkit for AI image workflows."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Fabric Physics Engine contributors" }]
keywords = ["cloth-simulation", "fabric", "physics", "prompt-engineering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=7.0",
  "ruff>=0.5",
]

[project.scripts]
fabric-physics = "fabric_physics_engine.cli:main"

[project.urls]
Documentation = "https://github.com/fabric-physics-engine/fabric-physics-engine#readme"
Repository = "https://github.com/fabric-physics-engine/fabric-physics-engine"

[tool.setuptools.packages.find]
include = ["fabric_physics_engine*", "fabric_physics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
